# nyx-anvil

./: .gitignore  LICENSE  README.md  cMakelists.txt  nyx.toml
cli/: CMakeLists.txt
cli/src/: main.cpp
docs/: 00-Vision & Mission  01-Principles  02-Architecture  03 - Threat Model  04-Protection Model  05-CLI  06-Engine  07-Adapters  08-Config  09-Diagrams  11-configuration-contract.md  architecture.md  blueprint.md  notes.md
engine/: CMakeLists.txt
engine/include/nyx/: configuration.hpp  configuration_parser.hpp  constants.hpp  engine.hpp  project.hpp  protection.hpp
engine/src/: configuration.cpp  configuration_parser.cpp  engine.cpp  project.cpp  protection.cpp
src/: main.cpp
src/cli/: cli.cpp  cli.h  dispatcher.cpp  dispatcher.h  parser.cpp  parser.h
